 20120716 (T.S.):
 - pmbfd.h: tweaked some things so that opcodes from binutils-2.21 compiles
    o added definition for STRING_COMMA_LEN
    o added bfd_arch_l1om (and associated 'bfd_mach_l1om...' macros)
    o MODIFIED bfd_mach_powerpc and bfd_mach_rs6000 to match binutils-2.21
    o fixed typo in bfd_mach_rs6k... macros
 20120712 (T.S.):
 - added dmpphdr.c, getphdr.c, scnt.c to CVS (had forgotten)
 - pmelfP.h, strm.c, mstrm.c, fstrm.c: moved handling of 'noclose' arg to
   pmelf_delstrm() to individual stream method.
 - pmelf.h, pmelfP.h, strm.c, mstrm.c: added pmelf_mapstrm() which uses mmap
   when available.
 20120712 (T.S.):
 - strm.c, fstrm.c, mstrm.c, pmelfP.h, pmelf.h: added pmelf_tell().
 - Makefile.am, dmpphdr.c, getphdr.c, scnt.c, rdelf.c, getehdr.c,
   pmelf.h:
   initial/rudimentary support for program headers.
 - symtab.c, rdelf.c, dmpshdr.c, getshdr.c, findsymhdrs.c, pmelf.h:
   support for dynamic symbols
 - strm.c: let pmelf_delstrm() accept (and ignore) NULL stream argument.
 20120622 (T.S.):
 - pmelf.h:   Added definition for SHT_GNU_HASH
 - bfd.c:     Ignore/skip SHT_GNU_HASH
 - dmpshdr.c: Print string info for GNU section types.
 20100630 (T.S.):
 - configure.ac, bfd.c: Added test for <strings.h>. rtems-4.10/newlib-1.18
   declare strcasecmp() in <strings.h> (POSIX). Hence we include that
   if present.
 20091202 (T.S.):
 - att-gnu-powerpc.c: BUGFIX: scanning for ABI tags would access
   bad memory if tag was not present in object file. 
   Added Tag_GNU_Power_ABI_Struct_Return.
   Added GNU_Power_ABI_FP_SP_HARD (new value for FP tag).
 - attrP.h, attpbfasdestroy.c, att-gnu-powerpc.c, attpbfasmatch.c,
   attbpfasprint.c, attpbfasread.c, attset.c:
   Introduced new union combining 'public' and 'opaque' values.
   Previous implementation was wrong since it would not correctly
   store 'opaque' values (arrays assumed 'public' layout).
   The new union is now used in both, the array and list parts
   of an attribute table.